tests/cheri-ci/expected/0079-struct2.error.c.expected
cheri-ci/0079-struct2.error.c:7:8: error: constraint violation: redefinition of 'T1'
struct T1 {
       ^~ 
ยง6.7.2.3#1: 
1   A specific type shall have its content defined at most once.
